log
Fri, May  2, 2025 10:52:19 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025 10:53:09 AM: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
ea2e3ca
Fri, May  2, 2025 10:55:13 AM: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
2ced3eb
Fri, May  2, 2025 11:00:05 AM: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  12|6
total_score: 15/70
437d290
Fri, May  2, 2025 11:01:34 AM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
8e520a5
Fri, May  2, 2025 11:07:35 AM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
dc7ea73
Fri, May  2, 2025 11:08:18 AM: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
96b95ce
Fri, May  2, 2025 11:08:22 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
810329c
Fri, May  2, 2025 11:08:36 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
0a70259
Fri, May  2, 2025 11:08:56 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8e64867
Fri, May  2, 2025 11:09:17 AM: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
9699ca0
Fri, May  2, 2025 11:09:49 AM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
1bb857a
Sun, May  4, 2025 10:23:42 PM: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  16|4
total_score: 30/70
a70350c
Sun, May  4, 2025 10:29:01 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
fe318a2
Sun, May  4, 2025 10:52:25 PM: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
44140f4
Sun, May  4, 2025 10:59:09 PM: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  27|1
total_score: 60/70
59b40fa
Sun, May  4, 2025 11:04:29 PM: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  29|0
total_score: 70/70
130367a
Sun, May  4, 2025 11:16:54 PM: 
 treemap.c | 42 +++++++++++++++++++-----------------------
 1 file changed, 19 insertions(+), 23 deletions(-)
 tests:  29|0
total_score: 70/70
bfedfa8
